# youtube2text

./: .gitignore  LICENSE  README.md  app.py  downloadAudio.py  downloadSubs.py  hello.py  intoText.py  pyproject.toml  transcript.txt
src/: downloadAudio.py  downloadSubs.py  intoText.py
