[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Vano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.7.9"
openai = "^1.35.13"
python-dotenv = "^1.0.1"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"